2015-August-28 Chris Morley

	* src/Rdouble.cpp,src/Rdouble.h: ensure that a ZPE specified by a
	  derivedFrom attribute is updated at the end, after any fitting, etc.,
	  and the new value appears (with the correct units) in the Firefox output.
	  As requested by Mark Blitz.	   

	* src/System.cpp: correct bug which sometimes caused first of two control
	  blocks to be inactive.


2015-August-09 Chris Morley
    
	* ThermodynamicTable.cpp: Illustrate how a calcMethod can set its own
	modelParameters. Needs editing for proper values.
	 
2015-August-08 Struan Robertson

    * MesmerTools.h/.cpp, gDensityOfStates.cpp/.h and all DoS classes: Density
    of states classes altered so as to return the variance of the energy in order
    to calculate heat capacity.

2015-August-05 Struan Robertson

    * gDensityOfStates.cpp, HinderedRotorQM1D.cpp: Fix for enthalpy bug in
    the ThermodynamicTable method.

2015-August-01 Chris Morley

	* src/ConditionsManager.cpp: tidy up and correct parsing of
	  <PTPair>, etc.

	* src/calcmethod.h, src/System.cpp: Expand DoesOwnParsing() to allow
	calcMethods more choice in what they parse themselves.

	* src/plugins/ThermodynamicTable.cpp: Write both analytical and cell
	versions if	<me:withCellDOSCalc> specified, else just analytical.
	Allows normal parsing for <modelParameters> but has its own defaults if
	the section is not present.

	* mesmer1.xsl: formatting of expanded thermo table.

	* MesmerQA/ThermodynamicTable/ThermodynamicTable.xml:
	add <me:withCellDOSCalc> but baselines not yet updated. 

	* src/ParseForPlugin.h: put extra info in log file.

	* schemas/mesmer.xsd,schemas/mesmerPlugins.xsd: update schemas.

	* MesmerQA/HSO2/HSO2.xml: Make schema compliant.

2015-July-26 Struan Robertson

    * ConditionsManager.cpp: Fix for concentration bug.

2015-July-26 Struan Robertson

    * System.cpp/.h: Initial plumbing of methods related to direct analysis of 
    experimental data.
